--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <form onsubmit="addTask(event)">
       <input id="task-input" placeholder="Nội dung công việc" required>
       <select id="priority-select">
-        <option value="3">Ưu tiên cao</option>
-        <option value="2">Trung bình</option>
-        <option value="1">Thấp</option>
+        <option value="high">Ưu tiên cao</option>
+        <option value="medium">Trung bình</option>
+        <option value="low">Thấp</option>
       </select>
       <button type="submit">Thêm công việc</button>
     </form>
