--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>To-Do App Theo Ngày</title>
+  <title>To-Do List App</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -32,6 +32,15 @@
   </div>
 
   <div id="app-screen" style="display: none;">
+    <div class="user-menu-container">
+      <button id="user-icon-btn">
+        <i class="fas fa-user"></i>
+      </button>
+      <div class="user-dropdown" id="user-dropdown">
+        <a href="#" onclick="editProfile()">Chỉnh sửa hồ sơ</a>
+        <a href="#" onclick="logout()">Đăng xuất</a>
+      </div>
+    </div>
     <h2>Lịch làm việc</h2>
     <input type="date" id="task-date" onchange="loadTasks()" />
     <form onsubmit="addTask(event)">
@@ -44,7 +53,44 @@
       <button type="submit">Thêm công việc</button>
     </form>
     <ul id="task-list"></ul>
-    <button onclick="logout()">Đăng xuất</button>
+  </div>
+  
+  <div id="edit-profile-modal" class="modal">
+    <div class="modal-content">
+      <h3>Cập nhật hồ sơ cá nhân</h3>
+      <input id="edit-username" readonly />
+      <input id="edit-avatar" type="file" accept="image/*" />
+      <img id="avatar-preview" style="width: 100px; height: 100px; object-fit: cover; margin-top: 10px;" />
+      <input id="edit-name" type="text" placeholder="Họ và tên" />
+      <input id="edit-dob" type="date" placeholder="Ngày sinh" />
+      <input id="edit-email" type="email" placeholder="Email" />
+      <input id="edit-phone" type="tel" placeholder="Số điện thoại" />
+      <select id="edit-job">
+        <option value="">-- Chọn nghề nghiệp --</option>
+        <option value="học sinh - sinh viên">Học sinh - Sinh viên</option>
+        <option value="giáo viên">Giáo viên</option>
+        <option value="nhân viên văn phòng">Nhân viên văn phòng</option>
+        <option value="công an">Công an</option>
+        <option value="bộ đội">Bộ đội</option>
+        <option value="bác sĩ">Bác sĩ</option>
+        <option value="lao động tự do">Lao động tự do</option>
+        <option value="khác">Khác</option>
+      </select>
+      <input id="edit-workplace" placeholder="Đơn vị làm việc" />
+      <button onclick="openChangePasswordModal()">Đổi mật khẩu</button>
+      <button onclick="saveProfile()">Lưu</button>
+      <button onclick="closeEditModal()">Huỷ</button>
+    </div>
+  </div>
+
+  <div id="change-password-modal" class="modal">
+    <div class="modal-content">
+      <h3>Đổi mật khẩu</h3>
+      <input id="new-password" type="password" placeholder="Mật khẩu mới" />
+      <input id="confirm-password" type="password" placeholder="Xác nhận mật khẩu" />
+      <button onclick="saveNewPassword()">Lưu</button>
+      <button onclick="closeChangePasswordModal()">Hủy</button>
+    </div>
   </div>
 
   <script src="script.js"></script>
