--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       </div>
     </div>
     <h2>Lịch làm việc</h2>
+    <p style="text-align: center; margin-top: 10px;">
+      <a href="all-tasks.html" style="color: white;">Xem tất cả công việc</a>
+    </p>
     <input type="date" id="task-date" onchange="loadTasks()" />
     <form onsubmit="addTask(event)">
       <input id="task-input" placeholder="Nội dung công việc" required>
