--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <h2>Lịch làm việc</h2>
     <p style="text-align: center; margin-top: 10px;">
-      <a href="alltasks.html" style="color: white;">Xem tất cả công việc</a>
+      <a href="alltask.html" style="color: white;">Xem tất cả công việc</a>
     </p>
     <input type="date" id="task-date" onchange="loadTasks()" />
     <form onsubmit="addTask(event)">
