--- a/all-tasks.html
+++ b/all-tasks.html
@@ -19,6 +19,9 @@
       </div>
     </div>
     <h2>Tất cả công việc</h2>
+    <div style="text-align: center; margin-bottom: 10px;">
+      <a href="index.html" style="color: white; font-weight: bold;">Trang chủ</a>
+    </div>
     <div id="all-tasks-list"></div>
   </div>
   <div id="edit-profile-modal" class="modal">
