--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-  <div id="auth-screen">
+  <div id="auth-screen" class="centered-auth">
     <div id="login-screen">
       <form onsubmit="event.preventDefault(); login();">
         <h2>Đăng nhập</h2>
