--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div id="app-screen" style="display: none;">
     <header class="navbar">
       <div class="nav-left">
-        <a href="index.html" class="nav-item">Trang chủ</a>
+        <a href="index.html" class="nav-item" onclick="location.reload(); return false;">Trang chủ</a>
         <a href="all-tasks.html" class="nav-item">Tất cả công việc</a>
       </div>
       <div class="nav-right">
