--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div id="register-screen" style="display: none;">
       <form onsubmit="event.preventDefault(); register();">
         <h2>Đăng ký</h2>
-        <input id="new-username" placeholder="Tài khoản mới" />
+        <input id="new-username" placeholder="Tên tài khoản mới" />
         <input id="new-password" type="password" placeholder="Mật khẩu mới" />
         <input id="confirm-password" type="password" placeholder="Nhập lại mật khẩu" />
-        <button type="submit">Tạo tài khoản</button>
+        <button type="submit">Đăng ký</button>
         <p>Đã có tài khoản? <a href="#" onclick="toggleAuth('login')">Đăng nhập</a></p>
       </form>
     </div>
@@ -56,7 +56,7 @@
       </section>
 
       <section class="task-list-container">
-        <h2>Các công việc theo ngày đã chọn</h2>
+        <h2>Dang sách công việc</h2>
         <ul id="task-list"></ul>
       </section>
     </main>
