--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <input id="new-password" type="password" placeholder="Mật khẩu mới" />
         <input id="confirm-password" type="password" placeholder="Nhập lại mật khẩu" />
         <button type="submit">Đăng ký</button>
+        <p id="register-error" style="color: red;"></p>
         <p>Đã có tài khoản? <a href="#" onclick="toggleAuth('login')">Đăng nhập</a></p>
       </form>
     </div>
